--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Designer Portfolio | Python, HTML, CSS, JS Developer</title>
+    <title>Hamidur Rahman</title>
     <meta name="description" content="Web designer and developer portfolio showcasing projects in Python, HTML, CSS, JavaScript, WordPress, SQL, and Cyber Security." />
     <meta name="author" content="Web Designer" />
     <meta name="keywords" content="web designer, python developer, html, css, javascript, wordpress, sql, cyber security, portfolio" />
