--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hamidur Rahman</title>
-    <meta name="description" content="Web designer and developer portfolio showcasing projects in Python, HTML, CSS, JavaScript, WordPress, SQL, and Cyber Security." />
-    <meta name="author" content="Web Designer" />
-    <meta name="keywords" content="web designer, python developer, html, css, javascript, wordpress, sql, cyber security, portfolio" />
+    <meta name="description" content="" />
+    <meta name="author" content="Hamidur Rahman" />
+    <meta name="keywords" content="developer,cyber security, portfolio" />
 
-    <meta property="og:title" content="Web Designer Portfolio" />
-    <meta property="og:description" content="Web designer and developer portfolio showcasing projects in Python, HTML, CSS, JavaScript, WordPress, SQL, and Cyber Security." />
+    <meta property="og:title" content="Hamidur Rahman" />
+    <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@yourusername" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
+     -->
     <link rel="canonical" href="https://yourportfolio.com" />
   </head>
 
