--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="Hamidur Rahman" />
     <meta property="og:description" content="" />
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" /> -->
+    <meta property="og:image" content="https://hamidur0x.github.io/assets/me-DU1JHOdN.png" />
 
     <!-- <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@yourusername" />
