--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hamidur Rahman</title>
-    <meta name="description" content="" />
+    <meta name="description" content="I'm a passionate web designer who loves building things" />
     <meta name="author" content="Hamidur Rahman" />
     <meta name="keywords" content="developer,cyber security, portfolio" />
 
     <meta property="og:title" content="Hamidur Rahman" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="I'm a passionate web designer who loves building things" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://hamidur0x.github.io/assets/me-DU1JHOdN.png" />
 
